--- a/Div_three/readme
+++ b/Div_three/readme
@@ -1,2 +1,2 @@
 
-![image](https://github.com/keyonhome/AXI4_LiteIP/blob/master/img/Liteport.png)
+![image](https://github.com/keyonhome/Verilog_IP_toolbar/blob/master/img/div_three_TB.JPG)
